--- a/1-analyses/fold-depth/depth.Rmd
+++ b/1-analyses/fold-depth/depth.Rmd
@@ -10,7 +10,6 @@ knitr::opts_chunk$set(echo = TRUE, tidy = TRUE, cache = FALSE)
 library(ggplot2)
 ```
 
-
 ## Load measurements
 
 ```{r load}
@@ -32,8 +31,20 @@ ggplot(results, aes(Genotype, Length, color = Genotype)) + geom_violin(draw_quan
 ggsave("depth_all.png")
 
 # Plot stocks separately
-ggplot(results, aes(Genotype, Length, color = Genotype)) + geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE) + geom_jitter(alpha = 0.8, width = 0.1, show.legend = FALSE) + facet_wrap(~Sample) + labs(x = "mutant", y = "depth") + scale_color_manual(values=c("#0072b2", "#e69f03")) + theme_classic()
-ggsave("depth_facet.png")
+ggplot(results, aes(Genotype, Length, fill = Genotype)) +
+  geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE) +
+  geom_jitter(alpha = 0.8, width = 0.1, size = 2, show.legend = FALSE) +
+  facet_wrap(~Sample, strip.position = "top") +
+  labs(x = "mutants", y = "depth") +
+  scale_color_manual(values=c("#0072b2", "#e69f03")) +
+  scale_fill_manual(values=c("#0072b2", "#e69f03")) +
+  theme_classic() +
+  theme(text =  element_text(size = 25),
+        strip.background = element_blank(),
+        strip.placement = "outside",
+        strip.text.x = element_text(face = "italic"),
+        panel.background = element_rect(colour = "black", size=1))
+ggsave("depth_facet.png", width = 10, height = 5)
 
 
 ```
