--- a/1-analyses/folded-area/area.Rmd
+++ b/1-analyses/folded-area/area.Rmd
@@ -7,6 +7,8 @@ creation: February 18, 2021
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, tidy = TRUE, cache = FALSE)
+# Load ggplot
+library(ggplot2)
 ```
 
 ## Analysis
@@ -96,21 +98,32 @@ total <- merge(total, embryos, by = "Embryo", all.x = TRUE)
 ## Area plot
 
 ```{r area}
-# Load ggplot
-library(ggplot2)
-
 # Plot raw area of individual folds
 ggplot(results, aes(factor(Sample, level = c("control", "btd", "eve")), Area, colour = Sample)) +
   geom_violin() + geom_jitter(alpha = 0.8, width = 0.15)
 
 # Plot corrected area of individual folds
-ggplot(results, aes(factor(Sample, level = c("control", "btd", "eve")), AreaCorr, colour = Sample)) + geom_violin() + geom_jitter(alpha = 0.8, width = 0.15) +
+ggplot(results, aes(factor(Sample, level = c("control", "btd", "eve")), AreaCorr, colour = Sample)) +
+  geom_violin() + geom_jitter(alpha = 0.8, width = 0.15) +
   labs(title = "Invaginated area of cephalic furrow compared to ectopic folds", x = "sample", y = expression(micrometers^2))
 ggsave("folded-area_mutants.png")
 
 # Plot corrected area of individual folds
-ggplot(results, aes(Genotype, AreaCorr, colour = Genotype)) + geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE) + geom_jitter(alpha = 0.8, width = 0.1, show.legend = FALSE) + labs(x = "mutant", y = expression(micrometers^2)) + facet_wrap(~Stock) + scale_color_manual(values=c("#0072b2", "#e69f03")) + theme_classic()
-ggsave("folded-area_mutants_facet.png")
+ggplot(results, aes(Genotype, AreaCorr, fill = Genotype)) +
+  geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE) +
+  geom_jitter(alpha = 0.8, width = 0.1, size = 2, show.legend = FALSE) +
+  labs(x = "mutants", y = expression(paste("folded area ", (µm^2)))) +
+  facet_wrap(~Stock, strip.position = "top") +
+  scale_color_manual(values=c("#0072b2", "#e69f03")) +
+  scale_fill_manual(values=c("#0072b2", "#e69f03")) +
+  theme_classic() +
+  theme(text =  element_text(size = 25),
+        strip.background = element_blank(),
+        strip.placement = "outside",
+        strip.text.x = element_text(face = "italic"),
+        panel.background = element_rect(colour = "black", size=1))
+ggsave("folded-area_mutants_facet.png", width = 10, height = 7)
+
 
 # Plot corrected area of individual folds by genotype
 ggplot(results, aes(Genotype, AreaCorr, colour = Genotype)) + geom_violin(draw_quantiles = c("0.5")) + geom_jitter(alpha = 0.8, width = 0.15) +
