Adds SEM reference

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -811,6 +811,41 @@
   pmid     = "9367430"
 }
 
+@ARTICLE{Turner1977-ol,
+  title    = "Scanning electron microscopy of \textit{{D}rosophila
+              melanogaster} embryogenesis. {II}. Gastrulation and segmentation",
+  author   = "Turner, F R and Mahowald, A P",
+  abstract = "The sequence of gastrulation events in Drosophila melanogaster,
+              starting with the cellular blastoderm and culminating in a
+              segmented embryo, have been studied with scanning electron
+              microscopy (SEM). Extensive use is made of dissected embryos to
+              illustrate changes taking place within the embryo during
+              gastrulation. During the first 15 min of gastrulation, the
+              mesodermal portion of the germ band is established by the
+              invagination of approximately 1000 cells through the ventral
+              furrow. The primordia for the proctodeum and hindgut are shown to
+              form during early gastrulation. Detailed examination of the
+              surfaces of invaginating primordia shows similarities to other
+              systems and suggests possible underlying mechanisms. Germ band
+              elongation and the formation of the amnioserosa are described. At
+              the time of segmentation, three pairs of rudimentary cephalic
+              appendages develop posterior to the cephalic furrow. Tracheal
+              pits invaginate on all eight abdominal segments and on the second
+              and third thoracic segments. Modifications of the embryonic fate
+              map are discussed.",
+  journal  = "Dev. Biol.",
+  volume   =  57,
+  number   =  2,
+  pages    = "403--416",
+  month    =  jun,
+  year     =  1977,
+  url      = "http://dx.doi.org/10.1016/0012-1606(77)90225-1",
+  language = "en",
+  issn     = "0012-1606",
+  pmid     = "406152",
+  doi      = "10.1016/0012-1606(77)90225-1"
+}
+
 @ARTICLE{Denk-Lobnig2020-pr,
   title    = "Divergent and combinatorial mechanical strategies that promote
               epithelial folding during morphogenesis",
