--- a/1-analyses/fold-depth/depth.Rmd
+++ b/1-analyses/fold-depth/depth.Rmd
@@ -7,6 +7,7 @@ creation: May 31, 2021
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, tidy = TRUE, cache = FALSE)
+knitr::opts_knit$set(root.dir = "~/Dropbox/Projects/Cephalic_furrow/7-Paper/1-analyses/fold-depth")
 library(ggplot2)
 ```
 
@@ -44,7 +45,7 @@ ggplot(results, aes(Genotype, Length, fill = Genotype)) +
         strip.placement = "outside",
         strip.text.x = element_text(face = "italic"),
         panel.background = element_rect(colour = "black", size=1))
-ggsave("depth_facet.png", width = 10, height = 5)
+ggsave("depth_facet.png", width = 14, height = 5)
 
 
 ```
