Adding buckling reference

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1,15 +1,16 @@
 @ARTICLE{McGinnis1992-qj,
-  title   = "Homeobox genes and axial patterning",
-  author  = "McGinnis, W and Krumlauf, R",
-  journal = "Cell",
-  volume  =  68,
-  number  =  2,
-  pages   = "283--302",
-  month   =  jan,
-  year    =  1992,
-  url     = "http://www.ncbi.nlm.nih.gov/pubmed/1346368",
-  issn    = "0092-8674",
-  pmid    = "1346368"
+  title    = "Homeobox genes and axial patterning",
+  author   = "McGinnis, W and Krumlauf, R",
+  journal  = "Cell",
+  volume   =  68,
+  number   =  2,
+  pages    = "283--302",
+  month    =  jan,
+  year     =  1992,
+  url      = "http://www.ncbi.nlm.nih.gov/pubmed/1346368",
+  keywords = "- important -;Cephalic furrow;Furrow mechanics",
+  issn     = "0092-8674",
+  pmid     = "1346368"
 }
 
 @ARTICLE{Schindelin2012-di,
@@ -36,10 +37,43 @@
   month    =  jul,
   year     =  2012,
   url      = "http://dx.doi.org/10.1038/nmeth.2019",
+  keywords = "Manuscript;Furrow mechanics",
   issn     = "1548-7091, 1548-7105",
   pmid     = "22743772",
   doi      = "10.1038/nmeth.2019",
   pmc      = "PMC3855844"
+}
+
+@ARTICLE{Harding1986-ei,
+  title    = "Cross-regulatory interactions among pair-rule genes in
+              \textit{{D}rosophila}",
+  author   = "Harding, K and Rushlow, C and Doyle, H J and Hoey, T and Levine,
+              M",
+  abstract = "The pair-rule genes of Drosophila are required for the
+              subdivision of the developing embryo into a repeating series of
+              homologous body segments. One of the pair-rule genes,
+              even-skipped (eve), appears to be particularly important for the
+              overall segmentation pattern since eve- embryos lack all
+              segmental subdivisions in the middle body region. On the basis of
+              homeo box cross-homology we have isolated a gene, S72, which
+              probably corresponds to eve. In embryo tissue sections S72
+              transcripts show a periodic distribution pattern. The eve-
+              phenotype appears to involve altered patterns of fushi tarazu and
+              engrailed expression. These and other findings suggest that
+              pair-rule gene expression might involve hierarchical
+              cross-regulatory interactions.",
+  journal  = "Science",
+  volume   =  233,
+  number   =  4767,
+  pages    = "953--959",
+  month    =  aug,
+  year     =  1986,
+  url      = "http://dx.doi.org/10.1126/science.3755551",
+  keywords = "evx = even skipped;Furrow mechanics",
+  language = "en",
+  issn     = "0036-8075",
+  pmid     = "3755551",
+  doi      = "10.1126/science.3755551"
 }
 
 @ARTICLE{Bruce1998-ek,
@@ -75,6 +109,8 @@
   month     =  sep,
   year      =  1998,
   url       = "http://dx.doi.org/10.1006/dbio.1998.8968",
+  keywords  = "Brachiopod segmentation;Head-Trunk Boundary;Cephalic
+               furrow;Furrow mechanics",
   language  = "en",
   issn      = "0012-1606",
   pmid      = "9733577",
@@ -101,6 +137,7 @@
   pages    = "445--455",
   year     =  2012,
   url      = "http://dx.doi.org/10.1080/10255842.2010.539564",
+  keywords = "Cephalic furrow;Furrow mechanics",
   language = "en",
   issn     = "1025-5842, 1476-8259",
   pmid     = "21331957",
@@ -144,6 +181,9 @@
   month    =  dec,
   year     =  2001,
   url      = "http://www.ncbi.nlm.nih.gov/pubmed/11748148",
+  keywords = "pax3/7 = paired;evx = even skipped;buttonhead;- important
+              -;Cephalic furrow;Molecular patterning;Morphogenesis;Furrow
+              mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "11748148"
@@ -164,6 +204,7 @@
   month     =  apr,
   year      =  1985,
   url       = "http://link.springer.com/article/10.1007/BF00848246",
+  keywords  = "Drosophila;Cephalic furrow;Furrow mechanics",
   language  = "en",
   issn      = "0043-5546",
   doi       = "10.1007/BF00848246"
@@ -214,9 +255,22 @@
   month    =  sep,
   year     =  1989,
   url      = "http://www.ncbi.nlm.nih.gov/pubmed/2516798",
+  keywords = "Cephalic furrow;Furrow mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "2516798"
+}
+
+@ARTICLE{Costa1993-qj,
+  title     = "Gastrulation in \textit{{D}rosophila}: cellular mechanisms of
+               morphogenetic movements",
+  author    = "Costa, Michael and Sweeton, Dari and Wieschaus, Eric",
+  journal   = "The development of \{D\}rosophila melanogaster",
+  publisher = "Cold Spring Harbor Laboratory Press, Cold Spring Harbor, NY",
+  volume    =  1,
+  pages     = "425--465",
+  year      =  1993,
+  keywords  = "Furrow mechanics"
 }
 
 @ARTICLE{Spencer2015-td,
@@ -250,7 +304,8 @@
   year     =  2015,
   url      = "http://dx.doi.org/10.1016/j.ydbio.2015.03.022",
   keywords = "Apical constriction; Cell shape change; Cephalic furrow;
-              Gastrulation; Invagination; Morphogenesis",
+              Gastrulation; Invagination; Morphogenesis;- important -;Cephalic
+              furrow;Furrow mechanics",
   language = "en",
   issn     = "0012-1606, 1095-564X",
   pmid     = "25929228",
@@ -296,6 +351,7 @@
   month    =  aug,
   year     =  1992,
   url      = "http://dx.doi.org/10.1038/358687a0",
+  keywords = "Head-Trunk Boundary;Furrow mechanics",
   language = "en",
   issn     = "0028-0836",
   pmid     = "1353865",
@@ -331,7 +387,8 @@
   month    =  oct,
   year     =  2013,
   url      = "http://dx.doi.org/10.1073/pnas.1315642110",
-  keywords = "embryonic development; gene regulatory networks; optimization",
+  keywords = "embryonic development; gene regulatory networks;
+              optimization;Cephalic furrow;Furrow mechanics",
   language = "en",
   issn     = "0027-8424, 1091-6490",
   pmid     = "24089448",
@@ -393,7 +450,7 @@
   url      = "http://dx.doi.org/10.1186/s12859-017-1934-z",
   keywords = "Extensibility; Image processing; ImageJ; ImageJ2;
               Interoperability; N-dimensional; Open development; Open source;
-              Reproducibility",
+              Reproducibility;Furrow mechanics",
   language = "en",
   issn     = "1471-2105",
   pmid     = "29187165",
@@ -446,6 +503,7 @@
   month    =  mar,
   year     =  2017,
   url      = "http://dx.doi.org/10.1371/journal.pcbi.1005443",
+  keywords = "- important -;Cephalic furrow;Morphogenesis;Furrow mechanics",
   language = "en",
   issn     = "1553-734X, 1553-7358",
   pmid     = "28346461",
@@ -475,6 +533,8 @@
   month    =  jan,
   year     =  2017,
   url      = "http://dx.doi.org/10.1038/nature21348",
+  keywords = "- important -;Cephalic furrow;Furrow mechanics;Mechanical forces
+              in development",
   language = "en",
   issn     = "0028-0836, 1476-4687",
   pmid     = "28102269",
@@ -508,7 +568,8 @@
   month    =  apr,
   year     =  2017,
   url      = "http://dx.doi.org/10.1016/j.mod.2016.12.001",
-  keywords = "Cell intercalation; Drosophila; Forces; Germ-band extension",
+  keywords = "Cell intercalation; Drosophila; Forces; Germ-band extension;-
+              important -;Cephalic furrow;Morphogenesis;Furrow mechanics",
   language = "en",
   issn     = "0925-4773, 1872-6356",
   pmid     = "28013027",
@@ -553,6 +614,7 @@
   year     =  2013,
   url      = "http://dx.doi.org/10.1073/pnas.1220912110",
   annote   = "Cephalic furrow position has a precision of 1\% of embryo length.",
+  keywords = "- to be read -;Cephalic furrow;Furrow mechanics",
   language = "en",
   issn     = "0027-8424, 1091-6490",
   pmid     = "23580621",
@@ -583,6 +645,7 @@
   month    =  dec,
   year     =  2015,
   url      = "http://dx.doi.org/10.1038/nmeth.3648",
+  keywords = "imaging;Furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "26524242",
@@ -613,6 +676,7 @@
   pages    = "17--24",
   year     =  1988,
   url      = "https://www.ncbi.nlm.nih.gov/pubmed/2907986",
+  keywords = "Head-Trunk Boundary;Furrow mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "2907986"
@@ -649,6 +713,8 @@
   month    =  nov,
   year     =  1994,
   url      = "https://www.ncbi.nlm.nih.gov/pubmed/7720557",
+  keywords = "string;- important -;Molecular patterning;Mitotic domains;Furrow
+              mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "7720557",
@@ -665,6 +731,7 @@
   month    =  mar,
   year     =  2019,
   url      = "http://dx.doi.org/10.1038/s41592-019-0359-1",
+  keywords = "Furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "30886414",
@@ -689,7 +756,8 @@
   url       = "https://rupress.org/jcb/article-abstract/220/8/e202011106/212389/The-nature-of-cell-division-forces-in-epithelial?redirectedFrom=fulltext",
   keywords  = "cell growth; epithelium; diagnostic imaging; participation in
                ward rounds; stress; gel; cytokinesis; e-cadherin; cell nucleus;
-               epithelial cells; drosophila; epidermis",
+               epithelial cells; drosophila; epidermis;Mitotic domains;Furrow
+               mechanics",
   issn      = "0021-9525",
   doi       = "10.1083/jcb.202011106"
 }
@@ -728,6 +796,7 @@
   month    =  dec,
   year     =  2018,
   url      = "http://dx.doi.org/10.1038/s41592-018-0216-7",
+  keywords = "Furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "30478326",
@@ -760,6 +829,7 @@
   month    =  sep,
   year     =  2019,
   url      = "http://dx.doi.org/10.1038/s41592-019-0582-9",
+  keywords = "Furrow mechanics",
   language = "en",
   issn     = "1548-7091, 1548-7105",
   pmid     = "31570887",
@@ -806,6 +876,9 @@
               boundary in vertebrates reflects the existence of an ancestral
               organiser region, of which the CF might constitute a specialised
               evocation, is an interesting question for future consideration.",
+  keywords = "Drosophila;buttonhead;evx = even skipped;- important -;Cephalic
+              furrow;Head-Trunk Boundary;Molecular
+              patterning;Morphogenesis;Mitotic domains;Furrow mechanics",
   language = "en",
   issn     = "0950-1991",
   pmid     = "9367430"
@@ -840,6 +913,7 @@
   month    =  jun,
   year     =  1977,
   url      = "http://dx.doi.org/10.1016/0012-1606(77)90225-1",
+  keywords = "Drosophila;Cephalic furrow;Furrow mechanics",
   language = "en",
   issn     = "0012-1606",
   pmid     = "406152",
@@ -870,6 +944,7 @@
   month    =  mar,
   year     =  2020,
   url      = "http://dx.doi.org/10.1016/j.gde.2020.02.014",
+  keywords = "- to be read -;Furrow mechanics",
   language = "en",
   issn     = "0959-437X, 1879-0380",
   pmid     = "32171160",
@@ -911,7 +986,7 @@
               shortening; epithelial folding; lateral myosin contractility;
               mechanical noise; morphogenetic precision; myosin planar
               polarity; optogenetics; robustness; tissue-scale mechanical
-              coupling",
+              coupling;- important -;Cephalic furrow;Furrow mechanics",
   language = "en",
   issn     = "1534-5807, 1878-1551",
   pmid     = "32169160",
@@ -937,8 +1012,49 @@
   year      =  1997,
   url       = "https://doi.org/10.1007/978-3-662-22489-2_2",
   address   = "Berlin, Heidelberg",
+  keywords  = "- important -;Furrow mechanics",
   isbn      = "9783662224892",
   doi       = "10.1007/978-3-662-22489-2\_2"
+}
+
+@ARTICLE{Trushko2020-gf,
+  title    = "Buckling of an Epithelium Growing under Spherical Confinement",
+  author   = "Trushko, Anastasiya and Di Meglio, Ilaria and Merzouki, Aziza and
+              Blanch-Mercader, Carles and Abuhattum, Shada and Guck, Jochen and
+              Alessandri, Kevin and Nassoy, Pierre and Kruse, Karsten and
+              Chopard, Bastien and Roux, Aurélien",
+  abstract = "Many organs are formed through folding of an epithelium. This
+              change in shape is usually attributed to tissue heterogeneities,
+              for example, local apical contraction. In contrast, compressive
+              stresses have been proposed to fold a homogeneous epithelium by
+              buckling. While buckling is an appealing mechanism, demonstrating
+              that it underlies folding requires measurement of the stress
+              field and the material properties of the tissue, which are
+              currently inaccessible in vivo. Here, we show that monolayers of
+              identical cells proliferating on the inner surface of elastic
+              spherical shells can spontaneously fold. By measuring the elastic
+              deformation of the shell, we infer the forces acting within the
+              monolayer and its elastic modulus. Using analytical and numerical
+              theories linking forces to shape, we find that buckling
+              quantitatively accounts for the shape changes of our monolayers.
+              Our study shows that forces arising from epithelial growth in
+              three-dimensional confinement are sufficient to drive folding by
+              buckling.",
+  journal  = "Dev. Cell",
+  volume   =  54,
+  number   =  5,
+  pages    = "655--668.e6",
+  month    =  sep,
+  year     =  2020,
+  url      = "http://dx.doi.org/10.1016/j.devcel.2020.07.019",
+  keywords = "3D cell culture; alginate capsules; epithelial monolayer;
+              epithelium mechanics; morphogenesis;- to be read -;Furrow
+              mechanics",
+  language = "en",
+  issn     = "1534-5807, 1878-1551",
+  pmid     = "32800097",
+  doi      = "10.1016/j.devcel.2020.07.019",
+  pmc      = "PMC7497624"
 }
 
 @ARTICLE{Collinet2021-qa,
@@ -982,6 +1098,7 @@
   month    =  jan,
   year     =  2021,
   url      = "https://doi.org/10.1038/s41580-020-00318-6",
+  keywords = "- important -;Furrow mechanics;Mechanical forces in development",
   issn     = "1471-0072, 1471-0080",
   doi      = "10.1038/s41580-020-00318-6"
 }
@@ -1014,6 +1131,8 @@
   month    =  apr,
   year     =  1989,
   url      = "http://dx.doi.org/10.1016/0092-8674(89)90183-9",
+  keywords = "string;- important -;Cephalic furrow;Mitotic
+              domains;Mutants;Furrow mechanics",
   language = "en",
   issn     = "0092-8674",
   pmid     = "2702688",
@@ -1050,6 +1169,7 @@
   month    =  mar,
   year     =  2021,
   url      = "https://www.biorxiv.org/content/10.1101/2021.03.18.435928v1",
+  keywords = "- to be read -;Cephalic furrow;Furrow mechanics",
   language = "en",
   doi      = "10.1101/2021.03.18.435928"
 }
@@ -1085,6 +1205,7 @@
   month    =  jul,
   year     =  2020,
   url      = "http://dx.doi.org/10.1091/mbc.E19-12-0673",
+  keywords = "- important -;Cephalic furrow;Mitotic domains;Furrow mechanics",
   language = "en",
   issn     = "1059-1524, 1939-4586",
   pmid     = "32129704",
@@ -1123,6 +1244,7 @@
   month    =  mar,
   year     =  2010,
   url      = "http://dx.doi.org/10.1083/jcb.200910099",
+  keywords = "Drosophila;stocks;- to be read -;Furrow mechanics",
   language = "en",
   issn     = "0021-9525, 1540-8140",
   pmid     = "20194639",
@@ -1141,6 +1263,7 @@
   year      =  2005,
   url       = "https://www.worldcat.org/title/drosophila-a-laboratory-handbook/oclc/56324270",
   address   = "Cold Spring Harbor, N.Y.",
+  keywords  = "Furrow mechanics",
   isbn      = "9780879697068, 9781936113699"
 }
 
@@ -1176,6 +1299,7 @@
   month    =  feb,
   year     =  2013,
   url      = "http://dx.doi.org/10.1038/nature11792",
+  keywords = "- important -;Mitotic domains;Furrow mechanics",
   language = "en",
   issn     = "0028-0836, 1476-4687",
   pmid     = "23334416",
@@ -1208,6 +1332,7 @@
   month     =  feb,
   year      =  2016,
   url       = "http://dx.doi.org/10.1115/1.4032128",
+  keywords  = "- important -;Furrow mechanics;Good writing",
   language  = "en",
   issn      = "0148-0731, 1528-8951",
   pmid      = "26632268",
@@ -1259,6 +1384,7 @@
   month    =  sep,
   year     =  2016,
   url      = "http://dx.doi.org/10.1039/c6ib00046k",
+  keywords = "Furrow mechanics",
   language = "en",
   issn     = "1757-9694, 1757-9708",
   pmid     = "27476872",
@@ -1289,6 +1415,7 @@
   month    =  nov,
   year     =  2016,
   url      = "http://dx.doi.org/10.1093/bioinformatics/btw413",
+  keywords = "Furrow mechanics",
   language = "en",
   issn     = "1367-4803, 1367-4811",
   pmid     = "27412086",
