Adds citation to number of invaginated cells

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1392,6 +1392,39 @@
   pmc      = "PMC5021607"
 }
 
+@UNPUBLISHED{Stern2021-zv,
+  title    = "Deconstructing Gastrulation at the Single Cell Level",
+  author   = "Stern, Tomer and Streichan, Sebastian J and Shvartsman, Stanislav
+              Y and Wieschaus, Eric F",
+  abstract = "Gastrulation movements in all animal embryos start with regulated
+              deformations of patterned epithelial sheets. Current studies of
+              gastrulation use a wide range of model organisms and emphasize
+              either large-scale tissue processes or dynamics of individual
+              cells and cell groups
+              [1][1],[2][2],[11][3]–[13][4],[3][5]–[10][6]. Here we take a step
+              towards bridging these complementary strategies and deconstruct
+              early stages of gastrulation in the entire Drosophila embryo,
+              where transcriptional patterns in the blastoderm give rise to
+              region-specific cell behaviors. Our approach relies on an
+              integrated computational framework for cell segmentation and
+              tracking and on efficient algorithms for event detection. Our
+              results reveal how thousands of cell shape changes, divisions,
+              and intercalations drive large-scale deformations of the
+              patterned blastoderm, setting the stage for systems-level
+              dissection of a pivotal step in animal development. \#\#\#
+              Competing Interest Statement The authors have declared no
+              competing interest. [1]: \#ref-1 [2]: \#ref-2 [3]: \#ref-11 [4]:
+              \#ref-13 [5]: \#ref-3 [6]: \#ref-10",
+  journal  = "bioRxiv",
+  pages    = "2021.09.16.460711",
+  month    =  sep,
+  year     =  2021,
+  url      = "https://www.biorxiv.org/content/10.1101/2021.09.16.460711v1?rss=1&utm_source=dlvr.it&utm_medium=twitter",
+  keywords = "Furrow mechanics",
+  language = "en",
+  doi      = "10.1101/2021.09.16.460711"
+}
+
 @ARTICLE{Legland2016-cp,
   title    = "{MorphoLibJ}: integrated library and plugins for mathematical
               morphology with {ImageJ}",
