--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1,3 +1,14 @@
+@BOOK{Campos-Ortega1985-ma,
+  title     = "The Embryonic Development of Drosophila melanogaster:",
+  author    = "Campos-Ortega, José A and Hartenstein, Volker",
+  publisher = "Springer Berlin Heidelberg",
+  year      =  1985,
+  url       = "http://link.springer.com/book/10.1007%2F978-3-662-02454-6",
+  keywords  = "Furrow mechanics",
+  isbn      = "9783662024560, 9783662024546",
+  doi       = "10.1007/978-3-662-02454-6"
+}
+
 @ARTICLE{McGinnis1992-qj,
   title    = "Homeobox genes and axial patterning",
   author   = "McGinnis, W and Krumlauf, R",
